--- a/pickups.html
+++ b/pickups.html
@@ -11,8 +11,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Dustin Hopkins/Matt Bryant</td>
+<td width=50>11/4</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -158,8 +158,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Chris Herndon/Dallas Goedert</td>
+<td width=50>11/4</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
@@ -310,8 +310,8 @@
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Ryan Fitzpatrick/Dante Pettis</td>
+<td width=50>11/3</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
@@ -355,7 +355,7 @@ Team 8  - Latavius Murray
 </td></tr>
 <tr><td width=50>9/27</td>
 <td width=500>
-Team 6  - Kyle Rudolph, pickup ()<br>
+Team 6  - Kyle Rudolph, pickup (Graham Gano/Jordan Wilkins 11/3)<br>
 Team 7  - TJ Yeldon
 </td></tr>
 <tr><td width=50>10/5</td>
