--- a/roster.html
+++ b/roster.html
@@ -44,15 +44,15 @@
 <tr><td>CHI</td><td>Tarik Cohen            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
-<tr><td>DEN</td><td>Demaryius Thomas       </td></tr>
+<tr><td>HOU</td><td>Demaryius Thomas       </td></tr>
 <tr><td> SF</td><td>Marquise Goodwin       </td></tr>
 <tr><td>BUF</td><td>Kelvin Benjamin        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Jimmy Graham           </td></tr>
 <tr><td>ATL</td><td>Austin Hooper          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>ATL</td><td>Matt Bryant            </td></tr>
 <tr><td>JAX</td><td>Josh Lambo             </td></tr>
+<tr><td>WAS</td><td>Dustin Hopkins         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Christian Kirk         </td></tr>
 <tr><td>CLE</td><td>Nick Chubb             </td></tr>
@@ -99,7 +99,7 @@
 <tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
 <tr><td>CHI</td><td>Jordan Howard          </td></tr>
 <tr><td>OAK</td><td>Doug Martin            </td></tr>
-<tr><td> GB</td><td>Ty Montgomery          </td></tr>
+<tr><td>BAL</td><td>Ty Montgomery          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>TY Hilton              </td></tr>
 <tr><td>LAR</td><td>Brandin Cooks          </td></tr>
@@ -143,7 +143,7 @@
 <tr><td> TB</td><td>Ronald Jones           </td></tr>
 <tr><td>CHI</td><td>Anthony Miller         </td></tr>
 <tr><td>BAL</td><td>Lamar Jackson          </td></tr>
-<tr><td>PHI</td><td>Dallas Goedert         </td></tr>
+<tr><td>NYJ</td><td>Chris Herndon          </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -168,9 +168,9 @@
 <tr><td>MIN</td><td>Kyle Rudolph           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
+<tr><td>CAR</td><td>Graham Gano            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Kerryon Johnson        </td></tr>
-<tr><td>IND</td><td>Jordan Wilkins         </td></tr>
 <tr><td>NYG</td><td>Kyle Lauletta          </td></tr>
 </table>
 </td>
@@ -219,7 +219,7 @@
 <tr><td>PIT</td><td>Antonio Brown          </td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
-<tr><td>DET</td><td>Golden Tate            </td></tr>
+<tr><td>PHI</td><td>Golden Tate            </td></tr>
 <tr><td>MIA</td><td>Kenny Stills           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Zach Ertz              </td></tr>
@@ -237,6 +237,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>John (9)</b></font></td></tr>
 <tr><td>PIT</td><td>Ben Roethlisberger     </td></tr>
 <tr><td> SF</td><td>CJ Beathard            </td></tr>
+<tr><td> TB</td><td>Ryan Fitzpatrick       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Kareem Hunt            </td></tr>
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
@@ -255,7 +256,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Josh Rosen             </td></tr>
 <tr><td>ARI</td><td>Chase Edmonds          </td></tr>
-<tr><td> SF</td><td>Dante Pettis           </td></tr>
 <tr><td>CLE</td><td>Greg Joseph            </td></tr>
 <tr><td>ATL</td><td>Ito Smith              </td></tr>
 </table>
