--- a/thousand.html
+++ b/thousand.html
@@ -387,6 +387,12 @@
     <td>1110</td>
     <td>Matthew</td>
     <td>895</td></tr>
+<tr><td>2018</td>
+    <td>Week 9</td>
+    <td>Grant Mydland</td>
+    <td>1105</td>
+    <td>Mike</td>
+    <td>665</td></tr>
 <tr><td>2001</td>
     <td>Week 9</td>
     <td>Randy Edwards</td>
@@ -777,6 +783,12 @@
     <td>1020</td>
     <td>Matthew</td>
     <td>655</td></tr>
+<tr><td>2018</td>
+    <td>Week 9</td>
+    <td>John Heinzelmann</td>
+    <td>1020</td>
+    <td>Sam</td>
+    <td>495</td></tr>
 <tr><td>1998</td>
     <td>Week 13</td>
     <td>Steve Butler</td>
