--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 <a href="week5.html"><b>5</b></a>
 <a href="week6.html"><b>6</b></a>
 <a href="week7.html"><b>7</b></a>
-<a href="week8.html"><b>8</b></a><br>
+<a href="week8.html"><b>8</b></a>
+<a href="week9.html"><b>9</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -66,43 +67,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>6685</font></td>
-    <td><font size=2>4850</font></td>
+    <td><font size=2>7465</font></td>
+    <td><font size=2>5090</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>615</font></td>
     <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>Roger(3)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>6060</font></td>
-    <td><font size=2>5045</font></td>
+    <td><font size=2>6665</font></td>
+    <td><font size=2>5460</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>470</font></td>
     <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Mike(7)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>4970</font></td>
-    <td><font size=2>5945</font></td>
-    <td><font size=2>780</font></td>
-    <td><font size=2>535</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Steven(5)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>5470</font></td>
-    <td><font size=2>5855</font></td>
+    <td><font size=2>6105</font></td>
+    <td><font size=2>6255</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>John(9)</font></td>
-    <td><font size=2>2</font></td>
+<tr><td><font size=2>Mike(7)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>4290</font></td>
-    <td><font size=2>4740</font></td>
-    <td><font size=2>870</font></td>
+    <td><font size=2>5635</font></td>
+    <td><font size=2>7050</font></td>
+    <td><font size=2>780</font></td>
+    <td><font size=2>535</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>John(9)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>5310</font></td>
+    <td><font size=2>5235</font></td>
+    <td><font size=2>1020</font></td>
     <td><font size=2>325</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
@@ -115,43 +116,43 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Sam(10)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6525</font></td>
     <td><font size=2>6030</font></td>
-    <td><font size=2>5010</font></td>
     <td><font size=2>985</font></td>
     <td><font size=2>445</font></td>
     <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Grant(6)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6155</font></td>
+    <td><font size=2>6410</font></td>
+    <td><font size=2>1345</font></td>
+    <td><font size=2>420</font></td>
+    <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5770</font></td>
-    <td><font size=2>5535</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>6185</font></td>
+    <td><font size=2>6140</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Grant(6)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5050</font></td>
-    <td><font size=2>5745</font></td>
-    <td><font size=2>1345</font></td>
-    <td><font size=2>420</font></td>
-    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>4755</font></td>
-    <td><font size=2>5200</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>5155</font></td>
+    <td><font size=2>5835</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>345</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>4665</font></td>
-    <td><font size=2>5820</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>4905</font></td>
+    <td><font size=2>6600</font></td>
     <td><font size=2>790</font></td>
-    <td><font size=2>300</font></td>
+    <td><font size=2>240</font></td>
     <td><font size=2>0</font></td></tr>
 </table>
 </table>
