--- a/roster.html
+++ b/roster.html
@@ -159,7 +159,7 @@
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
-<tr><td>CLE</td><td>Josh Gordon            </td></tr>
+<tr><td> NE</td><td>Josh Gordon            </td></tr>
 <tr><td>TEN</td><td>Corey Davis            </td></tr>
 <tr><td> NE</td><td>Julian Edelman         </td></tr>
 <tr><td>LAR</td><td>Cooper Kupp            </td></tr>
