--- a/pickups.html
+++ b/pickups.html
@@ -87,8 +87,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Mike Badgley/Ty Montgomery</td>
+<td width=50>11/7</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -215,8 +215,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Marquez Valdes-Scantling/Kenny Stills</td>
+<td width=50>11/6</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -246,8 +246,8 @@
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Traded to Roger</td>
+<td width=50>11/6</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
@@ -303,8 +303,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Josh Adams/-</td>
+<td width=50>11/8</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -372,5 +372,10 @@ Team 10 - Davante Adams
 <td width=500>
 Team 5  - Philip Rivers<br>
 Team 10 - Russell Wilson
+</td></tr>
+<tr><td width=50>11/6</td>
+<td width=500>
+Team 3  - James White, Amari Cooper, OJ Howard, pickup ()<br>
+Team 7  - Drew Brees, Marvin Jones, Dan Bailey, Jamaal Williams (cut Jordy Nelson)
 </td></tr>
 </table>
