--- a/roster.html
+++ b/roster.html
@@ -26,7 +26,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Harrison Butker        </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>MIN</td><td>Daniel Carlson         </td></tr>
+<tr><td>OAK</td><td>Daniel Carlson         </td></tr>
 <tr><td>LAR</td><td>John Kelly             </td></tr>
 <tr><td>BAL</td><td>Hayden Hurst           </td></tr>
 <tr><td>DAL</td><td>Michael Gallup         </td></tr>
@@ -63,25 +63,24 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Roger (3)</b></font></td></tr>
-<tr><td> NO</td><td>Drew Brees             </td></tr>
 <tr><td> KC</td><td>Patrick Mahomes        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>David Johnson          </td></tr>
 <tr><td>CAR</td><td>Christian McCaffrey    </td></tr>
-<tr><td> GB</td><td>Jamaal Williams        </td></tr>
 <tr><td>WAS</td><td>Adrian Peterson        </td></tr>
+<tr><td> NE</td><td>James White            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>AJ Green               </td></tr>
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
-<tr><td>DET</td><td>Marvin Jones           </td></tr>
 <tr><td> KC</td><td>Sammy Watkins          </td></tr>
 <tr><td>DET</td><td>Kenny Golladay         </td></tr>
+<tr><td>DAL</td><td>Amari Cooper           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Ricky Seals-Jones      </td></tr>
 <tr><td>PIT</td><td>Vance McDonald         </td></tr>
+<tr><td> TB</td><td>OJ Howard              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Wil Lutz               </td></tr>
-<tr><td>MIN</td><td>Dan Bailey             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>DJ Moore               </td></tr>
 <tr><td> NE</td><td>Sony Michel            </td></tr>
@@ -99,7 +98,6 @@
 <tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
 <tr><td>CHI</td><td>Jordan Howard          </td></tr>
 <tr><td>OAK</td><td>Doug Martin            </td></tr>
-<tr><td>BAL</td><td>Ty Montgomery          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>TY Hilton              </td></tr>
 <tr><td>LAR</td><td>Brandin Cooks          </td></tr>
@@ -110,6 +108,7 @@
 <tr><td>OAK</td><td>Jared Cook             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
+<tr><td>LAC</td><td>Mike Badgley           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Josh Allen             </td></tr>
 <tr><td>ATL</td><td>Calvin Ridley          </td></tr>
@@ -181,24 +180,24 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Mike (7)</b></font></td></tr>
 <tr><td> NE</td><td>Tom Brady              </td></tr>
 <tr><td> TB</td><td>Jameis Winston         </td></tr>
+<tr><td> NO</td><td>Drew Brees             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Alex Collins           </td></tr>
 <tr><td>SEA</td><td>Chris Carson           </td></tr>
-<tr><td> NE</td><td>James White            </td></tr>
 <tr><td>MIN</td><td>Dalvin Cook            </td></tr>
 <tr><td>MIN</td><td>Latavius Murray        </td></tr>
+<tr><td> GB</td><td>Jamaal Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>DAL</td><td>Amari Cooper           </td></tr>
 <tr><td>CAR</td><td>Devin Funchess         </td></tr>
-<tr><td>OAK</td><td>Jordy Nelson           </td></tr>
 <tr><td>HOU</td><td>Will Fuller            </td></tr>
 <tr><td>BAL</td><td>John Brown             </td></tr>
+<tr><td>DET</td><td>Marvin Jones           </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td> TB</td><td>OJ Howard              </td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td> TB</td><td>Cameron Brate          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Stephen Gostkowski     </td></tr>
+<tr><td>MIN</td><td>Dan Bailey             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Royce Freeman          </td></tr>
 <tr><td>CLE</td><td>Baker Mayfield         </td></tr>
@@ -220,7 +219,6 @@
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
 <tr><td>PHI</td><td>Golden Tate            </td></tr>
-<tr><td>MIA</td><td>Kenny Stills           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Zach Ertz              </td></tr>
 <tr><td>CAR</td><td>Greg Olsen             </td></tr>
@@ -230,6 +228,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Jason Sanders          </td></tr>
 <tr><td>CLE</td><td>Antonio Callaway       </td></tr>
+<tr><td> GB</td><td>Marquez ValdesScantling</td></tr>
 </table>
 </td>
 <td valign=top>
@@ -287,6 +286,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Sam Darnold            </td></tr>
 <tr><td>SEA</td><td>Rashaad Penny          </td></tr>
+<tr><td>PHI</td><td>Josh Adams             </td></tr>
 </table>
 </td>
 <td>
