--- a/thousand.html
+++ b/thousand.html
@@ -117,6 +117,12 @@
     <td>1235</td>
     <td>Randy</td>
     <td>755</td></tr>
+<tr><td>2018</td>
+    <td>Week 10</td>
+    <td>Randy Edwards</td>
+    <td>1235</td>
+    <td>Rich</td>
+    <td>800</td></tr>
 <tr><td>2007</td>
     <td>Week 6</td>
     <td>Randy Edwards</td>
