--- a/week8.html
+++ b/week8.html
@@ -25,7 +25,7 @@
 <tr><td>Mixon</td>         <td></td><td align=right>210</td></tr>
 <tr><td>Crowell</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Beckham</td>       <td></td><td align=right>65</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>65</td></tr>
+<tr><td>DAdams</td>        <td></td><td align=right>65</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>110</td></tr>
 <tr><td>Prater</td>        <td></td><td align=right>10</td></tr>
 <tr><td>Darnold</td>       <td></td><td align=right>50</td></tr>
