--- a/week9.html
+++ b/week9.html
@@ -142,7 +142,7 @@
 <tr><td>Wilson</td>        <td></td><td align=right>130</td></tr>
 <tr><td>McCoy</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Crowell</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>50</td></tr>
+<tr><td>DAdams</td>        <td></td><td align=right>50</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>195</td></tr>
 <tr><td>Prater</td>        <td></td><td align=right>90</td></tr>
