--- a/pickups.html
+++ b/pickups.html
@@ -321,7 +321,7 @@
 </tr>
 </table>
 <br><br>
-<table border=2>
+<table width=650 border=2>
 <tr bgcolor="#000A78">
 <td colspan=2><font size=4 color='white'><center>Trades</td></tr>
 <tr><td width=50>9/1</td>
