--- a/pickups.html
+++ b/pickups.html
@@ -378,4 +378,9 @@ Team 10 - Russell Wilson
 Team 3  - James White, Amari Cooper, OJ Howard, pickup ()<br>
 Team 7  - Drew Brees, Marvin Jones, Dan Bailey, Jamaal Williams (cut Jordy Nelson)
 </td></tr>
+<tr><td width=50>11/18</td>
+<td width=600>
+Team 3  - Julian Edelman, Kyle Rudolph<br>
+Team 6  - Kenny Golladay, Ricky Seals-Jones
+</td></tr>
 </table>
