--- a/thousand.html
+++ b/thousand.html
@@ -99,6 +99,12 @@
     <td>1280</td>
     <td>Grant</td>
     <td>775</td></tr>
+<tr><td>2018</td>
+    <td>Week 11</td>
+    <td>Matthew Edwards</td>
+    <td>1270</td>
+    <td>Grant</td>
+    <td>970</td></tr>
 <tr><td>2015</td>
     <td>Week 13</td>
     <td>Sam Edwards</td>
@@ -351,6 +357,12 @@
     <td>1130</td>
     <td>-</td>
     <td>-</td></tr>
+<tr><td>2018</td>
+    <td>Week 11</td>
+    <td>Randy Edwards</td>
+    <td>1130</td>
+    <td>Sam</td>
+    <td>755</td></tr>
 <tr><td>2001</td>
     <td>Week 7</td>
     <td>Mike Wieczorek</td>
