--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 <a href="week7.html"><b>7</b></a>
 <a href="week8.html"><b>8</b></a>
 <a href="week9.html"><b>9</b></a>
-<a href="week10.html"><b>10</b></a><br>
+<a href="week10.html"><b>10</b></a>
+<a href="week10.html"><b>11</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -69,43 +70,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(1)</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>7985</font></td>
-    <td><font size=2>5685</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>8445</font></td>
+    <td><font size=2>6565</font></td>
     <td><font size=2>960</font></td>
-    <td><font size=2>520</font></td>
+    <td><font size=2>460</font></td>
     <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>Roger(3)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>7315</font></td>
-    <td><font size=2>6130</font></td>
+    <td><font size=2>8195</font></td>
+    <td><font size=2>6590</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>470</font></td>
     <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>John(9)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>6540</font></td>
+    <td><font size=2>6375</font></td>
+    <td><font size=2>1020</font></td>
+    <td><font size=2>325</font></td>
+    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Steven(5)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7005</font></td>
-    <td><font size=2>7065</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>7650</font></td>
+    <td><font size=2>7815</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Mike(7)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>6230</font></td>
-    <td><font size=2>7570</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>6720</font></td>
+    <td><font size=2>8130</font></td>
     <td><font size=2>780</font></td>
-    <td><font size=2>535</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>John(9)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>5980</font></td>
-    <td><font size=2>5885</font></td>
-    <td><font size=2>1020</font></td>
-    <td><font size=2>325</font></td>
+    <td><font size=2>490</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -115,43 +116,43 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Sam(10)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>7275</font></td>
-    <td><font size=2>6635</font></td>
-    <td><font size=2>985</font></td>
-    <td><font size=2>445</font></td>
-    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>7420</font></td>
-    <td><font size=2>6940</font></td>
+    <td><font size=2>8550</font></td>
+    <td><font size=2>7695</font></td>
     <td><font size=2>1235</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>2</font></td></tr>
+<tr><td><font size=2>Sam(10)</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>8030</font></td>
+    <td><font size=2>7765</font></td>
+    <td><font size=2>985</font></td>
+    <td><font size=2>445</font></td>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(6)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6965</font></td>
-    <td><font size=2>7310</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7935</font></td>
+    <td><font size=2>8580</font></td>
     <td><font size=2>1345</font></td>
     <td><font size=2>420</font></td>
     <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Matthew(4)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>5760</font></td>
-    <td><font size=2>6585</font></td>
-    <td><font size=2>1030</font></td>
+    <td><font size=2>7030</font></td>
+    <td><font size=2>7555</font></td>
+    <td><font size=2>1270</font></td>
     <td><font size=2>345</font></td>
-    <td><font size=2>1</font></td></tr>
+    <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>5705</font></td>
-    <td><font size=2>7835</font></td>
+    <td><font size=2>6455</font></td>
+    <td><font size=2>8480</font></td>
     <td><font size=2>800</font></td>
     <td><font size=2>240</font></td>
     <td><font size=2>0</font></td></tr>
