--- a/pickups.html
+++ b/pickups.html
@@ -99,8 +99,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Gus Edwards/Doug Martin</td>
+<td width=50>11/20</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -341,7 +341,8 @@ Team 5  - Eric Ebron/Delanie Walker (10/2)<br>
 Team 9  - Mike Williams/Jimmy Garoppolo (10/4)<br>
 Team 5  - Mike Davis/Jay Ajayi (10/10)<br>
 Team 4  - Tyler Boyd/Devonta Freeman (10/21)<br>
-Team 1  - Mitchell Trubisky/Matt McCrane (10/22)
+Team 1  - Mitchell Trubisky/Matt McCrane (10/22)<br>
+Team 7  - Adam Humphries/Will Fuller (11/21)
 </td></tr>
 <tr><td width=50>8/28</td>
 <td width=600>
@@ -375,12 +376,22 @@ Team 10 - Russell Wilson
 </td></tr>
 <tr><td width=50>11/6</td>
 <td width=600>
-Team 3  - James White, Amari Cooper, OJ Howard, pickup ()<br>
+Team 3  - James White, Amari Cooper, OJ Howard, pickup (Dak Prescott/- 11/21)<br>
 Team 7  - Drew Brees, Marvin Jones, Dan Bailey, Jamaal Williams (cut Jordy Nelson)
 </td></tr>
 <tr><td width=50>11/18</td>
 <td width=600>
 Team 3  - Julian Edelman, Kyle Rudolph<br>
 Team 6  - Kenny Golladay, Ricky Seals-Jones
+</td></tr>
+<tr><td width=50>11/20</td>
+<td width=600>
+Team 1  - Mike Badgley<br>
+Team 4  - Mitchell Trubisky
+</td></tr>
+<tr><td width=50>11/23</td>
+<td width=600>
+Team 5  - Peyton Barber<br>
+Team 6  - Lamar Jackson
 </td></tr>
 </table>
