--- a/roster.html
+++ b/roster.html
@@ -8,7 +8,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (1)</b></font></td></tr>
 <tr><td>ATL</td><td>Matt Ryan              </td></tr>
-<tr><td>CHI</td><td>Mitchell Trubisky      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Todd Gurley            </td></tr>
 <tr><td>ATL</td><td>Tevin Coleman          </td></tr>
@@ -25,6 +24,7 @@
 <tr><td> NE</td><td>Rob Gronkowski         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Harrison Butker        </td></tr>
+<tr><td>LAC</td><td>Mike Badgley           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>OAK</td><td>Daniel Carlson         </td></tr>
 <tr><td>LAR</td><td>John Kelly             </td></tr>
@@ -64,6 +64,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Roger (3)</b></font></td></tr>
 <tr><td> KC</td><td>Patrick Mahomes        </td></tr>
+<tr><td>DAL</td><td>Dak Prescott           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>David Johnson          </td></tr>
 <tr><td>CAR</td><td>Christian McCaffrey    </td></tr>
@@ -94,10 +95,10 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (4)</b></font></td></tr>
 <tr><td>CAR</td><td>Cam Newton             </td></tr>
 <tr><td>DET</td><td>Matthew Stafford       </td></tr>
+<tr><td>CHI</td><td>Mitchell Trubisky      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
 <tr><td>CHI</td><td>Jordan Howard          </td></tr>
-<tr><td>OAK</td><td>Doug Martin            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>TY Hilton              </td></tr>
 <tr><td>LAR</td><td>Brandin Cooks          </td></tr>
@@ -108,13 +109,13 @@
 <tr><td>OAK</td><td>Jared Cook             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
-<tr><td>LAC</td><td>Mike Badgley           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Josh Allen             </td></tr>
 <tr><td>ATL</td><td>Calvin Ridley          </td></tr>
 <tr><td>IND</td><td>Nyheim Hines           </td></tr>
 <tr><td>DEN</td><td>Phillip Lindsay        </td></tr>
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
+<tr><td>BAL</td><td>Gus Edwards            </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -127,6 +128,7 @@
 <tr><td>WAS</td><td>Chris Thompson         </td></tr>
 <tr><td>CLE</td><td>Duke Johnson           </td></tr>
 <tr><td>SEA</td><td>Mike Davis             </td></tr>
+<tr><td> TB</td><td>Peyton Barber          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Julio Jones            </td></tr>
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
@@ -141,7 +143,6 @@
 <tr><td>NYG</td><td>Saquon Barkley         </td></tr>
 <tr><td> TB</td><td>Ronald Jones           </td></tr>
 <tr><td>CHI</td><td>Anthony Miller         </td></tr>
-<tr><td>BAL</td><td>Lamar Jackson          </td></tr>
 <tr><td>NYJ</td><td>Chris Herndon          </td></tr>
 </table>
 </td>
@@ -153,7 +154,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td>LAC</td><td>Melvin Gordon          </td></tr>
-<tr><td> TB</td><td>Peyton Barber          </td></tr>
 <tr><td> SF</td><td>Matt Breida            </td></tr>
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -171,6 +171,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Kerryon Johnson        </td></tr>
 <tr><td>NYG</td><td>Kyle Lauletta          </td></tr>
+<tr><td>BAL</td><td>Lamar Jackson          </td></tr>
 </table>
 </td>
 </tr>
@@ -189,9 +190,9 @@
 <tr><td> GB</td><td>Jamaal Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Devin Funchess         </td></tr>
-<tr><td>HOU</td><td>Will Fuller            </td></tr>
 <tr><td>BAL</td><td>John Brown             </td></tr>
 <tr><td>DET</td><td>Marvin Jones           </td></tr>
+<tr><td> TB</td><td>Adam Humphries         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td> TB</td><td>Cameron Brate          </td></tr>
