--- a/thousand.html
+++ b/thousand.html
@@ -855,6 +855,12 @@
     <td>1015</td>
     <td>Matthew</td>
     <td>560</td></tr>
+<tr><td>2018</td>
+    <td>Week 11</td>
+    <td>Matthew Edwards</td>
+    <td>1015</td>
+    <td>Randy</td>
+    <td>600</td></tr>
 <tr><td>1998</td>
     <td>Week 11</td>
     <td>Matthew Edwards</td>
