--- a/roster.html
+++ b/roster.html
@@ -250,7 +250,7 @@
 <tr><td>NYJ</td><td>Robby Anderson         </td></tr>
 <tr><td>LAC</td><td>Mike Williams          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>IND</td><td>Jack Doyle             </td></tr>
+<tr><td>PIT</td><td>Jesse James            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Robbie Gould           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -273,7 +273,7 @@
 <tr><td>NYJ</td><td>Isaiah Crowell         </td></tr>
 <tr><td>PHI</td><td>Corey Clement          </td></tr>
 <tr><td>CIN</td><td>Giovani Bernard        </td></tr>
-<tr><td>PHI</td><td>Wendell Smallwood      </td></tr>
+<tr><td> KC</td><td>Spencer Ware           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Odell Beckham          </td></tr>
 <tr><td>ARI</td><td>Larry Fitzgerald       </td></tr>
