--- a/thousand.html
+++ b/thousand.html
@@ -105,6 +105,12 @@
     <td>1270</td>
     <td>Grant</td>
     <td>970</td></tr>
+<tr><td>2018</td>
+    <td>Week 13</td>
+    <td>Matthew Edwards</td>
+    <td>1270</td>
+    <td>Mike</td>
+    <td>380</td></tr>
 <tr><td>2015</td>
     <td>Week 13</td>
     <td>Sam Edwards</td>
