--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 <a href="week9.html"><b>9</b></a>
 <a href="week10.html"><b>10</b></a>
 <a href="week11.html"><b>11</b></a>
-<a href="week12.html"><b>12</b></a><br>
+<a href="week12.html"><b>12</b></a>
+<a href="week13.html"><b>13</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -70,44 +71,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>10</font></td>
+    <td><font size=2>11</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>9310</font></td>
-    <td><font size=2>7060</font></td>
+    <td><font size=2>9900</font></td>
+    <td><font size=2>7500</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>460</font></td>
     <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>Roger(3)</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>9165</font></td>
-    <td><font size=2>7285</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>9685</font></td>
+    <td><font size=2>8165</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>470</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Steven(5)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>8420</font></td>
-    <td><font size=2>8575</font></td>
+    <td><font size=2>8815</font></td>
+    <td><font size=2>8865</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>7035</font></td>
-    <td><font size=2>7240</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>7325</font></td>
+    <td><font size=2>7635</font></td>
     <td><font size=2>1020</font></td>
-    <td><font size=2>325</font></td>
+    <td><font size=2>290</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Mike(7)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7480</font></td>
-    <td><font size=2>8900</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>7860</font></td>
+    <td><font size=2>10170</font></td>
     <td><font size=2>780</font></td>
-    <td><font size=2>490</font></td>
+    <td><font size=2>380</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -118,42 +119,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Sam(10)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>8550</font></td>
-    <td><font size=2>8275</font></td>
+    <td><font size=2>9430</font></td>
+    <td><font size=2>8795</font></td>
     <td><font size=2>985</font></td>
     <td><font size=2>445</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>9150</font></td>
-    <td><font size=2>8710</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>9590</font></td>
+    <td><font size=2>9300</font></td>
     <td><font size=2>1235</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>Grant(6)</font></td>
-    <td><font size=2>5</font></td>
+<tr><td><font size=2>Matthew(4)</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>8630</font></td>
-    <td><font size=2>9550</font></td>
+    <td><font size=2>9315</font></td>
+    <td><font size=2>8535</font></td>
+    <td><font size=2>1270</font></td>
+    <td><font size=2>345</font></td>
+    <td><font size=2>4</font></td></tr>
+<tr><td><font size=2>Grant(6)</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>9110</font></td>
+    <td><font size=2>9915</font></td>
     <td><font size=2>1345</font></td>
     <td><font size=2>420</font></td>
     <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>Matthew(4)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8045</font></td>
-    <td><font size=2>8155</font></td>
-    <td><font size=2>1270</font></td>
-    <td><font size=2>345</font></td>
-    <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>6965</font></td>
-    <td><font size=2>9000</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>7330</font></td>
+    <td><font size=2>9480</font></td>
     <td><font size=2>800</font></td>
     <td><font size=2>240</font></td>
     <td><font size=2>0</font></td></tr>
