--- a/pickups.html
+++ b/pickups.html
@@ -315,8 +315,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Spencer Ware/Wendell Smallwood</td>
+<td width=50>11/30</td>
 </tr></table></td>
 </tr>
 </table>
@@ -342,7 +342,8 @@ Team 9  - Mike Williams/Jimmy Garoppolo (10/4)<br>
 Team 5  - Mike Davis/Jay Ajayi (10/10)<br>
 Team 4  - Tyler Boyd/Devonta Freeman (10/21)<br>
 Team 1  - Mitchell Trubisky/Matt McCrane (10/22)<br>
-Team 7  - Adam Humphries/Will Fuller (11/21)
+Team 7  - Adam Humphries/Will Fuller (11/21)<br>
+Team 9  - Jesse James/Jack Doyle (11/29)
 </td></tr>
 <tr><td width=50>8/28</td>
 <td width=600>
