--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <a href="week10.html"><b>10</b></a>
 <a href="week11.html"><b>11</b></a>
 <a href="week12.html"><b>12</b></a>
-<a href="week13.html"><b>13</b></a><br>
+<a href="week13.html"><b>13</b></a>
+<a href="week14.html"><b>14</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -71,44 +72,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>11</font></td>
+    <td><font size=2>12</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>9900</font></td>
-    <td><font size=2>7500</font></td>
+    <td><font size=2>10725</font></td>
+    <td><font size=2>7945</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>460</font></td>
     <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>Roger(3)</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>9685</font></td>
-    <td><font size=2>8165</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>10490</font></td>
+    <td><font size=2>9155</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>470</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Steven(5)</font></td>
-    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>8815</font></td>
-    <td><font size=2>8865</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>9805</font></td>
+    <td><font size=2>9670</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>375</font></td>
+    <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Mike(7)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>8580</font></td>
+    <td><font size=2>10645</font></td>
+    <td><font size=2>780</font></td>
+    <td><font size=2>380</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7325</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>7635</font></td>
+    <td><font size=2>7945</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>290</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Mike(7)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>7860</font></td>
-    <td><font size=2>10170</font></td>
-    <td><font size=2>780</font></td>
-    <td><font size=2>380</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -120,41 +121,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Sam(10)</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>9430</font></td>
-    <td><font size=2>8795</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>9905</font></td>
+    <td><font size=2>9515</font></td>
     <td><font size=2>985</font></td>
     <td><font size=2>445</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9590</font></td>
-    <td><font size=2>9300</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>10075</font></td>
+    <td><font size=2>9745</font></td>
     <td><font size=2>1235</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9315</font></td>
-    <td><font size=2>8535</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>9760</font></td>
+    <td><font size=2>9360</font></td>
     <td><font size=2>1270</font></td>
     <td><font size=2>345</font></td>
     <td><font size=2>4</font></td></tr>
 <tr><td><font size=2>Grant(6)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9110</font></td>
-    <td><font size=2>9915</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>9555</font></td>
+    <td><font size=2>10400</font></td>
     <td><font size=2>1345</font></td>
     <td><font size=2>420</font></td>
     <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>7330</font></td>
-    <td><font size=2>9480</font></td>
+    <td><font size=2>7640</font></td>
+    <td><font size=2>9790</font></td>
     <td><font size=2>800</font></td>
     <td><font size=2>240</font></td>
     <td><font size=2>0</font></td></tr>
