--- a/pickups.html
+++ b/pickups.html
@@ -227,8 +227,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jeff Wilson/Brandon McManus</td>
+<td width=50>12/4</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -343,7 +343,8 @@ Team 5  - Mike Davis/Jay Ajayi (10/10)<br>
 Team 4  - Tyler Boyd/Devonta Freeman (10/21)<br>
 Team 1  - Mitchell Trubisky/Matt McCrane (10/22)<br>
 Team 7  - Adam Humphries/Will Fuller (11/21)<br>
-Team 9  - Jesse James/Jack Doyle (11/29)
+Team 9  - Jesse James/Jack Doyle (11/29)<br>
+Team 6  - Justin Jackson/Cooper Kupp (12/5)
 </td></tr>
 <tr><td width=50>8/28</td>
 <td width=600>
