--- a/roster.html
+++ b/roster.html
@@ -160,7 +160,6 @@
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td> NE</td><td>Josh Gordon            </td></tr>
 <tr><td>TEN</td><td>Corey Davis            </td></tr>
-<tr><td>LAR</td><td>Cooper Kupp            </td></tr>
 <tr><td>DET</td><td>Kenny Golladay         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Jordan Reed            </td></tr>
@@ -172,6 +171,7 @@
 <tr><td>DET</td><td>Kerryon Johnson        </td></tr>
 <tr><td>NYG</td><td>Kyle Lauletta          </td></tr>
 <tr><td>BAL</td><td>Lamar Jackson          </td></tr>
+<tr><td>LAC</td><td>Justin Jackson         </td></tr>
 </table>
 </td>
 </tr>
@@ -225,11 +225,11 @@
 <tr><td>CAR</td><td>Greg Olsen             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Greg Zuerlein          </td></tr>
-<tr><td>DEN</td><td>Brandon McManus        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Jason Sanders          </td></tr>
 <tr><td>CLE</td><td>Antonio Callaway       </td></tr>
 <tr><td> GB</td><td>Marquez ValdesScantling</td></tr>
+<tr><td> SF</td><td>Jeff Wilson            </td></tr>
 </table>
 </td>
 <td valign=top>
