--- a/pickups.html
+++ b/pickups.html
@@ -344,7 +344,9 @@ Team 4  - Tyler Boyd/Devonta Freeman (10/21)<br>
 Team 1  - Mitchell Trubisky/Matt McCrane (10/22)<br>
 Team 7  - Adam Humphries/Will Fuller (11/21)<br>
 Team 9  - Jesse James/Jack Doyle (11/29)<br>
-Team 6  - Justin Jackson/Cooper Kupp (12/5)
+Team 6  - Justin Jackson/Cooper Kupp (12/5)<br>
+Team 7  - Dede Westbrook/Alex Collins (12/14)<br>
+Team 7  - Robert Foster/Marvin Jones (12/14)
 </td></tr>
 <tr><td width=50>8/28</td>
 <td width=600>
