--- a/roster.html
+++ b/roster.html
@@ -183,7 +183,6 @@
 <tr><td> TB</td><td>Jameis Winston         </td></tr>
 <tr><td> NO</td><td>Drew Brees             </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>BAL</td><td>Alex Collins           </td></tr>
 <tr><td>SEA</td><td>Chris Carson           </td></tr>
 <tr><td>MIN</td><td>Dalvin Cook            </td></tr>
 <tr><td>MIN</td><td>Latavius Murray        </td></tr>
@@ -191,8 +190,8 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Devin Funchess         </td></tr>
 <tr><td>BAL</td><td>John Brown             </td></tr>
-<tr><td>DET</td><td>Marvin Jones           </td></tr>
 <tr><td> TB</td><td>Adam Humphries         </td></tr>
+<tr><td>JAX</td><td>Dede Westbrook         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td> TB</td><td>Cameron Brate          </td></tr>
@@ -202,6 +201,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Royce Freeman          </td></tr>
 <tr><td>CLE</td><td>Baker Mayfield         </td></tr>
+<tr><td>BUF</td><td>Robert Foster          </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -296,3 +296,4 @@
 </td>
 </tr>
 </table>
+
