--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 <a href="week11.html"><b>11</b></a>
 <a href="week12.html"><b>12</b></a>
 <a href="week13.html"><b>13</b></a>
-<a href="week14.html"><b>14</b></a><br>
+<a href="week14.html"><b>14</b></a>
+<a href="week15.html"><b>15</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -72,42 +73,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>12</font></td>
+    <td><font size=2>13</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>10725</font></td>
-    <td><font size=2>7945</font></td>
+    <td><font size=2>11265</font></td>
+    <td><font size=2>8415</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>460</font></td>
     <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>Roger(3)</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>10490</font></td>
-    <td><font size=2>9155</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>10950</font></td>
+    <td><font size=2>10110</font></td>
     <td><font size=2>1020</font></td>
-    <td><font size=2>470</font></td>
+    <td><font size=2>460</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Steven(5)</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9805</font></td>
-    <td><font size=2>9670</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>10275</font></td>
+    <td><font size=2>10210</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Mike(7)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>8580</font></td>
-    <td><font size=2>10645</font></td>
-    <td><font size=2>780</font></td>
+    <td><font size=2>9535</font></td>
+    <td><font size=2>11105</font></td>
+    <td><font size=2>955</font></td>
     <td><font size=2>380</font></td>
-    <td><font size=2>0</font></td></tr>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>John(9)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>7635</font></td>
-    <td><font size=2>7945</font></td>
+    <td><font size=2>8400</font></td>
+    <td><font size=2>8165</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>290</font></td>
     <td><font size=2>0</font></td></tr>
@@ -120,42 +121,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Sam(10)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>9905</font></td>
-    <td><font size=2>9515</font></td>
+    <td><font size=2>10550</font></td>
+    <td><font size=2>9995</font></td>
     <td><font size=2>985</font></td>
     <td><font size=2>445</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>10075</font></td>
-    <td><font size=2>9745</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>10295</font></td>
+    <td><font size=2>10510</font></td>
     <td><font size=2>1235</font></td>
-    <td><font size=2>335</font></td>
+    <td><font size=2>220</font></td>
     <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>9760</font></td>
-    <td><font size=2>9360</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>10100</font></td>
+    <td><font size=2>9795</font></td>
     <td><font size=2>1270</font></td>
-    <td><font size=2>345</font></td>
+    <td><font size=2>340</font></td>
     <td><font size=2>4</font></td></tr>
 <tr><td><font size=2>Grant(6)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>9555</font></td>
-    <td><font size=2>10400</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>10035</font></td>
+    <td><font size=2>11045</font></td>
     <td><font size=2>1345</font></td>
     <td><font size=2>420</font></td>
     <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>7640</font></td>
-    <td><font size=2>9790</font></td>
+    <td><font size=2>8075</font></td>
+    <td><font size=2>10130</font></td>
     <td><font size=2>800</font></td>
     <td><font size=2>240</font></td>
     <td><font size=2>0</font></td></tr>
