--- a/pickups.html
+++ b/pickups.html
@@ -18,8 +18,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Doug Martin/Frank Gore</td>
+<td width=50>12/23</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -175,8 +175,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Ka'imi Fairbairn/Graham Gano</td>
+<td width=50>12/18</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -187,8 +187,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Gerald Everett/Kerryon Johnson</td>
+<td width=50>12/23</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -346,7 +346,9 @@ Team 7  - Adam Humphries/Will Fuller (11/21)<br>
 Team 9  - Jesse James/Jack Doyle (11/29)<br>
 Team 6  - Justin Jackson/Cooper Kupp (12/5)<br>
 Team 7  - Dede Westbrook/Alex Collins (12/14)<br>
-Team 7  - Robert Foster/Marvin Jones (12/14)
+Team 7  - Robert Foster/Marvin Jones (12/14)<br>
+Team 8  - Damien Williams/Greg Olsen (12/18)<br>
+Team 10 - Elijah McGuire/Isaiah Crowell (12/23)
 </td></tr>
 <tr><td width=50>8/28</td>
 <td width=600>
