--- a/roster.html
+++ b/roster.html
@@ -13,8 +13,8 @@
 <tr><td>ATL</td><td>Tevin Coleman          </td></tr>
 <tr><td> GB</td><td>Aaron Jones            </td></tr>
 <tr><td>LAR</td><td>Malcolm Brown          </td></tr>
-<tr><td>MIA</td><td>Frank Gore             </td></tr>
 <tr><td>PIT</td><td>James Conner           </td></tr>
+<tr><td>OAK</td><td>Doug Martin            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Stefon Diggs           </td></tr>
 <tr><td>PIT</td><td>JuJu Smith-Schuster    </td></tr>
@@ -164,11 +164,11 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Jordan Reed            </td></tr>
 <tr><td>ARI</td><td>Ricky Seals-Jones      </td></tr>
+<tr><td>LAR</td><td>Gerald Everett         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
-<tr><td>CAR</td><td>Graham Gano            </td></tr>
+<tr><td>HOU</td><td>Ka'imi Fairbairn       </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>DET</td><td>Kerryon Johnson        </td></tr>
 <tr><td>NYG</td><td>Kyle Lauletta          </td></tr>
 <tr><td>BAL</td><td>Lamar Jackson          </td></tr>
 <tr><td>LAC</td><td>Justin Jackson         </td></tr>
@@ -215,6 +215,7 @@
 <tr><td>IND</td><td>Marlon Mack            </td></tr>
 <tr><td>JAX</td><td>Leonard Fournette      </td></tr>
 <tr><td>JAX</td><td>TJ Yeldon              </td></tr>
+<tr><td> KC</td><td>Damien Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Antonio Brown          </td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
@@ -222,7 +223,6 @@
 <tr><td>PHI</td><td>Golden Tate            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Zach Ertz              </td></tr>
-<tr><td>CAR</td><td>Greg Olsen             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Greg Zuerlein          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -270,10 +270,10 @@
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
 <tr><td>BUF</td><td>LeSean McCoy           </td></tr>
 <tr><td>JAX</td><td>Carlos Hyde            </td></tr>
-<tr><td>NYJ</td><td>Isaiah Crowell         </td></tr>
 <tr><td>PHI</td><td>Corey Clement          </td></tr>
 <tr><td>CIN</td><td>Giovani Bernard        </td></tr>
 <tr><td> KC</td><td>Spencer Ware           </td></tr>
+<tr><td>NYJ</td><td>Elijah McGuire         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Odell Beckham          </td></tr>
 <tr><td>ARI</td><td>Larry Fitzgerald       </td></tr>
