--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 <a href="week12.html"><b>12</b></a>
 <a href="week13.html"><b>13</b></a>
 <a href="week14.html"><b>14</b></a>
-<a href="week15.html"><b>15</b></a><br>
+<a href="week15.html"><b>15</b></a>
+<a href="week16.html"><b>16</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -75,7 +76,7 @@
 <tr><td><font size=2>States(1)</font></td>
     <td><font size=2>13</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>11265</font></td>
+    <td><font size=2>12085</font></td>
     <td><font size=2>8415</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>460</font></td>
@@ -83,7 +84,7 @@
 <tr><td><font size=2>Roger(3)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>10950</font></td>
+    <td><font size=2>11690</font></td>
     <td><font size=2>10110</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>460</font></td>
@@ -91,15 +92,15 @@
 <tr><td><font size=2>Steven(5)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>10275</font></td>
+    <td><font size=2>10585</font></td>
     <td><font size=2>10210</font></td>
     <td><font size=2>995</font></td>
-    <td><font size=2>375</font></td>
+    <td><font size=2>310</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Mike(7)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>9535</font></td>
+    <td><font size=2>10010</font></td>
     <td><font size=2>11105</font></td>
     <td><font size=2>955</font></td>
     <td><font size=2>380</font></td>
@@ -107,7 +108,7 @@
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>8400</font></td>
+    <td><font size=2>8730</font></td>
     <td><font size=2>8165</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>290</font></td>
@@ -123,15 +124,15 @@
 <tr><td><font size=2>Sam(10)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>10550</font></td>
+    <td><font size=2>11480</font></td>
     <td><font size=2>9995</font></td>
     <td><font size=2>985</font></td>
     <td><font size=2>445</font></td>
-    <td><font size=2>1</font></td></tr>
+    <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>10295</font></td>
+    <td><font size=2>11080</font></td>
     <td><font size=2>10510</font></td>
     <td><font size=2>1235</font></td>
     <td><font size=2>220</font></td>
@@ -139,7 +140,7 @@
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>10100</font></td>
+    <td><font size=2>10480</font></td>
     <td><font size=2>9795</font></td>
     <td><font size=2>1270</font></td>
     <td><font size=2>340</font></td>
@@ -147,7 +148,7 @@
 <tr><td><font size=2>Grant(6)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>10035</font></td>
+    <td><font size=2>10825</font></td>
     <td><font size=2>11045</font></td>
     <td><font size=2>1345</font></td>
     <td><font size=2>420</font></td>
@@ -155,7 +156,7 @@
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>8075</font></td>
+    <td><font size=2>8815</font></td>
     <td><font size=2>10130</font></td>
     <td><font size=2>800</font></td>
     <td><font size=2>240</font></td>
