--- a/roster.html
+++ b/roster.html
@@ -11,7 +11,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Todd Gurley            </td></tr>
 <tr><td>ATL</td><td>Tevin Coleman          </td></tr>
-<tr><td> GB</td><td>Aaron Jones            </td></tr>
 <tr><td>LAR</td><td>Malcolm Brown          </td></tr>
 <tr><td>PIT</td><td>James Conner           </td></tr>
 <tr><td>OAK</td><td>Doug Martin            </td></tr>
@@ -30,6 +29,7 @@
 <tr><td>LAR</td><td>John Kelly             </td></tr>
 <tr><td>BAL</td><td>Hayden Hurst           </td></tr>
 <tr><td>DAL</td><td>Michael Gallup         </td></tr>
+<tr><td>PIT</td><td>Matt McCrane           </td></tr>
 </table>
 </td>
 <td valign=top>
