--- a/roster.html
+++ b/roster.html
@@ -40,7 +40,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Le'Veon Bell           </td></tr>
 <tr><td>OAK</td><td>Marshawn Lynch         </td></tr>
-<tr><td>CAR</td><td>CJ Anderson            </td></tr>
+<tr><td>LAR</td><td>CJ Anderson            </td></tr>
 <tr><td>CHI</td><td>Tarik Cohen            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
